[package]
name = "modtype"
version = "0.6.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros that implement modular arithmetic integer types"
repository = "https://github.com/qryxip/modtype"
documentation = "https://docs.rs/modtype"
readme = "README.md"
keywords = ["math"]
categories = ["algorithms"]

[badges]
codecov = { repository = "qryxip/modtype" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["./derive"]

[dependencies]
modtype_derive = { version = "0.6.0", path = "./derive" }
num = "0.2.0"
num-bigint = "0.2.2"
num-integer = "0.1.41"
rand = "=0.6.5"

[dev-dependencies]
once_cell = "0.2.1"
rayon = "1.1.0"
